# scripvec

.beads/: issues.jsonl
.beads/.br_recovery/: beads.db-wal.20260420_220946_995473046.bak  beads.db-wal.20260420_221538_792398695.bak  beads.db.20260420_221538_792398695.bak
.claude/skills/debugging-9-rules/: SKILL.md
.claude/skills/debugging-9-rules/branches/: tool-gdb.md  tool-git-bisect.md  tool-pdbpp-scripts.md  tool-pdbpp-servers.md  tool-print-instrumentation.md
.claude/skills/debugging-9-rules/scripts/: install-pdbpp.sh  pdbpp-breakpoint-template.py  pdbpp-remote-attach.py
.claude/skills/debugging-9-rules/steps/: 01-understand-system.md  02-make-it-fail.md  03-quit-guessing-look.md  04-divide-and-conquer.md  05-change-one-thing.md  06-audit-trail.md  07-check-obvious.md  08-get-fresh-view.md  09-verify-fix.md
.claude/skills/debugging-9-rules/templates/: debugging-session.yaml
.claude/skills/tkeep/: SKILL.md
.ntm/: spawn-state.json
.ntm/summaries/: scripvec-20260421-005031.json
apps/scripvec_cli/: README.md
apps/scripvec_cli/src/scripvec_cli/: query_cmd.py  test_contracts.py
apps/scripvec_webapp/: README.md  pyproject.toml
apps/scripvec_webapp/src/scripvec_webapp/: __init__.py  __main__.py  cli.py  corpus.py  main.py  routes.py  test_cli.py  test_corpus.py  test_routes.py
apps/scripvec_webapp/src/scripvec_webapp/static/: app.js  index.html  styles.css
apps/scripvec_webapp/wireframe/: ScripVec Wireframes.html
